@@ -64,6 +64,7 @@ public class BreakdownService implements IBreakdownService {
     @Autowired
     private ITemplateService templateService;
 
+    @Autowired
     private IElectricCarRepository electricCarRepository;
 
 
@@ -136,9 +137,9 @@ public class BreakdownService implements IBreakdownService {
         .map(r -> (Repairment) r)
         .collect(Collectors.toList());
 
-         List<Repairment> newReps = Util.getListDiff(after, previous).stream().toList();
+         List<Repairment> newReps = Util.getListDiff(after, previous).stream().collect(Collectors.toList());
          newReps = this.templateService.checkDiscount(newReps);
-         return newReps.stream().map(r -> new RepairmentDTO(r)).toList();
+         return newReps.stream().map(r -> new RepairmentDTO(r)).collect(Collectors.toList());
         // after - previous
 //        return Util.getListDiff(after, previous).stream().map(r -> new RepairmentDTO(r)).toList();
      //   return Util.getListDiff(after, previous).stream().map(r -> new RepairmentDTO(r)).collect(Collectors.toList());
@@ -164,7 +165,7 @@ public class BreakdownService implements IBreakdownService {
     @Override
     public BatteryCheckDTO checkBattery(int carId, int caseScenarion) throws InterruptedException, NotFoundException {
            Breakdown breakdown = new Breakdown();
-
+        
         //    TODO check if electrical
         if(!carRepository.existsById(carId))
             throw new NotFoundException();
@@ -191,8 +192,10 @@ public class BreakdownService implements IBreakdownService {
         LocalDateTime now = LocalDateTime.now();
         // SessionPseudoClock clock = cepKSession.getSessionClock();
 
-        double currentValue = Simulation.calculateValue(scale, now.toLocalTime());
-        double voltageValue = Simulation.calculateValue(scale, now.toLocalTime());
+        Simulation simulation = new Simulation();
+
+        double currentValue = simulation.calculateValue(scale, now.toLocalTime());
+        double voltageValue = simulation.calculateValue(scale, now.toLocalTime());
         System.out.println(currentValue);
         System.out.println(voltageValue);
         cepKSession.insert(battery);
@@ -217,14 +220,14 @@ public class BreakdownService implements IBreakdownService {
                     now = now.plusSeconds(1);
 
 
-                    currentValue = Simulation.calculateValue(scale, now.toLocalTime());
-                    voltageValue = Simulation.calculateValue(scale, now.toLocalTime());
+                    currentValue = simulation.calculateValue(scale, now.toLocalTime());
+                    voltageValue = simulation.calculateValue(scale, now.toLocalTime());
                     // System.out.println(now.toString());
                     //  System.out.println(clock.getCurrentTime().toString());
                 
-                }while(!Simulation.finished);
-                Simulation.lastStart = null;
-                Simulation.finished = false;
+                }while(!simulation.finished);
+                simulation.lastStart = null;
+                simulation.finished = false;
         }
         else if(caseScenarion == 2){
             do{
@@ -245,14 +248,14 @@ public class BreakdownService implements IBreakdownService {
                     now = now.plusSeconds(1);
 
 
-                    currentValue = Simulation.calculateDegradationValue(scale, now.toLocalTime());
-                    voltageValue = Simulation.calculateDegradationValue(scale, now.toLocalTime());
+                    currentValue = simulation.calculateDegradationValue(scale, now.toLocalTime());
+                    voltageValue = simulation.calculateDegradationValue(scale, now.toLocalTime());
                     // System.out.println(now.toString());
                     //  System.out.println(clock.getCurrentTime().toString());
                 
-                }while(!Simulation.finished);
-                Simulation.lastStart = null;
-                Simulation.finished = false;
+                }while(!simulation.finished);
+                simulation.lastStart = null;
+                simulation.finished = false;
         }
         else{
             CurrentReadingEvent currentReadingEvent = new CurrentReadingEvent(currentValue, battery.getId(), Util.localToDate(now));
@@ -278,8 +281,8 @@ public class BreakdownService implements IBreakdownService {
             cepKSession.fireAllRules();
             cepKSession.halt();
           
-            Simulation.lastStart = null;
-            Simulation.finished = false;
+            simulation.lastStart = null;
+            simulation.finished = false;
         }
 
       
